# Benchmarks

./: CONTRIBUTING.md  LICENSE  README.md  benchmarks_results.md  docker-compose.yml  fix_env.js  generate_data.js  generate_json.js  generate_md.js  parse.js  parse.py  parse_batch2.js  parse_batch3.js  parse_nextjs.js  run_batch.sh  setup_db.sh
.github/workflows/: deploy.yml
actix/: Cargo.toml  Dockerfile
actix/src/: main.rs
axum/: Cargo.toml  Dockerfile
axum/src/: main.rs
dashboard/: package-lock.json  vite.config.js
dashboard/src/: App.jsx  data.json  index.css
dashboard/src/components/: FrameworkCard.css  FrameworkCard.jsx  Methodology.css  Methodology.jsx  MetricsExplanation.css  MetricsExplanation.jsx  RullstAnalysis.css  RullstAnalysis.jsx
dioxus/: Dockerfile
django/: Dockerfile  requirements.txt
express/: Dockerfile  package.json
fastapi/: Dockerfile  requirements.txt
fastify/: package.json
go-fiber/: Dockerfile  go.mod  main.go
go-gin/: Dockerfile  go.mod  main.go
hono/: package.json
laravel/: Dockerfile
leptos/: Dockerfile
nestjs/: Dockerfile  package.json
nextjs/: Dockerfile  package.json
phoenix/: Dockerfile  mix.exs
phoenix/lib/phoenix_app_web/: router.ex
phoenix/lib/phoenix_app_web/controllers/: api_controller.ex
poem/: Dockerfile
quarkus/: pom.xml
rails/: Dockerfile  Gemfile
rullst/: Cargo.toml  Dockerfile
rullst/src/: main.rs
salvo/: Cargo.toml  Dockerfile
springboot/: pom.xml
symfony/: Dockerfile  composer.json
