[package]
name = "rullst-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
rullst = "4.0.1"
axum = "0.8.9"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
